<resources>
    <string name="app_name">EnglishZone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Grammer">Грамматика</string>
    <string name="presentsimple_title_one">Английские глаголы.\nКлассификация глаголов \nанглийского языка.</string>
    <string name="presentsimple_title_two"><b>Анлийские глаголы в детальном рассмотрении:</b></string>
    <string name="presentSimple_zero"><b>Глагол</b> - это самостоятельная часть речи,
    обозначающая действия или состояние предмета или лица.\nВ английском языке признаком глагола в неопределенной форме является частица
    <b>to</b></string>
    <string name="presentsimple_two">Чаще всего именно глагол является ключевой основой, вокруг которой строится предложение, поэтому глаголы почти во всех языках следуют сложным правилам грамматики и имеют большое число форм.</string>
    <string name="english_verb_four">По структуре английские глаголы делятся на простые, производные, сложные и составные\n\n<b>Простые</b> глаголы
    состоят только из одного корня:</string>
    <string name="english_verb_title_one"><b>Структура английских глаголов</b></string>
    <string name="presentsimple_six">В <b>производных</b> глаголах, кроме корня, есть приставка и/или суффикс:</string>
    <string name="presentsimple_seven"><b>Сложные</b> глаголы состоят из двух основ:</string>
    <string name="presentsimple_eight"><b>Составные</b> (фразовые) глаголы состоят из глагола и наречия или предлога:</string>
    <string name="presentsimple_nine">По значению английские глаголы делятся на смысловые и служебные.\n\n<b>Смысловые</b>(самостоятельные) глаголы обладают собственным лексическим значением, они обозначают определенное действие или состояние:</string>
    <string name="presentsimple_ten"><b>Служебные</b> глаголы не имеют самостоятельного значения. Они используются только для построения сложных форм глагола или составных сказуемых. В составных сказуемых спрягаются именно служебные глаголы, то есть при их помощи можно выразить лицо, число и время:</string>
    <string name="general_presentsimple">Время <b>Present Simple</b> обозначает действие в настоящем в широком смысле слова.
        Оно употребляется для обозначения обычных, регулярно повторяющихся или постоянных действий, например,
        когда мы говорим о чьих либо привычках, режиме дня, расписании и т. д., т. е. <b>Present Simple</b> обозначает действия,
        которые происходят в настоящее время, но не привязаны именно к моменту речи.</string>
    <string name="general_presentsimple_four">Английский глагол во временной форме <b>Present Simple</b> почти всегда совпадает со своей
        начальной, то есть указанной в словаре, формой без частицы <b>To</b>. Лишь в 3-ем лице единственного числа к ней нужно прибавить
        окончание <b>-s</b>:</string>
    <string name="general_presentsimple_five">Если глагол оканчивается на <b>-s, -ss, -sh, -ch, -x, -o,</b> то к нему прибавляется окончание
        <b>-es:</b></string>
    <string name="general_presentsimple_six">К глаголам <b>-y</b> тоже прибавляется окончание <b>-es</b>, а <b>-у</b> заменяется на <b>-i</b></string>
    <string name="general_presentsimple_seven">Для того, чтобы построить  <b>вопросительное предложение </b>, перед подлежащим нужно поставить
        вспомогательный глагол. Время  <b>Present Simple </b> используется без него, поэтому в этом случае добавляется
        вспомогательный глагол  <b>do </b> (или  <b>does </b> в 3 л. ед. ч.):</string>
    <string name="general_presentsimple_nine">В <b>отрицательных предложениях</b> тоже используется вспомогательный глагол <b>do/does</b>,
        но не перед подлежащим, а перед глаголом. После него прибавляется отрицательная частица <b>not Do/does</b>. и <b>not</b> часто сокращаются до don’t и doesn’t соответственно:</string>
    <string name="general_presentsimple_eight"><b>(Примечание:)</b>\n\nВспомогательный глагол <b>do/does</b> может стоять и в утвердительных предложениях. Тогда предложение приобретает бoльшую экспрессивность, глагол оказывается эмоционально выделен:</string>
    <string name="pastsimple">Время <b>Past Simple</b> используется для обозначения действия, которое произошло в определенное время в прошлом
        и время совершения которого уже истекло. Для уточнения момента совершения действия в прошлом при использовании времени <b>Past Simple</b>  обычно
    используется такие слова, как <b>five days ago (пять дней назад),last year(в прошлом году), yesterday(вчера), in 1980(в 1980 году) и т.п</b></string>
    <string name="past_simple_four">Для того, чтобы поставить английский глагол во время <b>Past Simple</b>, нужно использовать его
        «вторую форму». Для большинства глаголов она образуется прибавлением окончания <b>-ed:</b></string>
    <string name="past_simple_five">Однако есть также достаточно большая группа неправильных английских глаголов, которые образуют форму прошедшего времени не по общим правилам, для них форму прошедшего времени нужно просто запомнить.</string>
    <string name="past_simple_six">В <b>вопросительном предложении</b> перед подлежащим нужно использовать вспомогательный глагол <b>do</b> в
        прошедшем времени – <b>did</b>, а после подлежащего поставить основной, значимый глагол в начальной форме:</string>
    <string name="past_simple_seven">В <b>отрицательных предложениях</b> перед глаголом нужно поставить вспомогательный глагол <b>did</b> и отрицательную частицу <b>not</b>:</string>
    <string name="future_simple_zero">Время <b>Future Simple</b> ссылается на действие, которое совершится в неопределенном или отдаленном
        будущем. Простое будущее время обычно используется с обстоятельствами:<b>tomorrow(завтра), next year(следующем году),
    in five years(через пять лет), in 2035(в 2035 году) и т.п</b></string>
    <string name="future_simple_four">Для того, чтобы поставить глагол во временную форму <b>Future Simple</b>, нужно использовать его
        начальную форму и вспомогательный глагол <b>shall</b> (для первого лица) или <b>will</b> (второе и третье лицо).
        В устной речи <b>shall</b> и <b>will</b> чаще всего сокращаются до формы <b>‘ll</b>, которая может использоваться во всех лицах.\n\nПримечание:
    \n\n В современном английском, особенно устной речи <b>will</b> стал использоваться  и в первом лице:</string>
    <string name="future_simple_five">В <b>вопросительном предложении</b> вспомогательные глаголы <b>shall</b> или <b>will</b> ставятся перед подлежащим. Значимый глагол остается после подлежащего в своей начальной форме:</string>
    <string name="future_simple_six">В <b>отрицательных предложениях</b> за вспомогательным глаголом следует отрицательная частица <b>not</b>.
        Вместе они могут быть сокращены до формы <b>shan’t</b> (чаще в брит. английском) или <b>won’t</b>:</string>
    <string name="present_continious_zero">Времена группы <b>Continuous</b> указывают на процесс, действие, длящееся в определенный момент
        в прошлом, настоящем или будущем. \n\nВремя <b>Present Continuous</b> обычно указывает на процесс, длящийся непосредственно в момент
        речи. На это могут указывать контекст или такие слова, как <b>now(сейчас),at the moment(в данный момент)</b> и т.п</string>
    <string name="present_continious_four">Для того, чтобы поставить глагол в форму времени <b>Present Continuous</b>,
        требуется вспомогательный <b>глагол to be</b>  в настоящем времени и <b>причастие настоящего времени</b> (Participle I)
        смыслового глагола.\n\n <b>to be </b>в настоящем времени имеет три формы:\n\n
    <b>am</b> - 1 лицо, ед.ч<b>(I am having)</b> \n
    <b>is</b> - 3 лицо, эд.ч<b>(He is reading)</b>\n
    <b>are</b> - 2 лицо ед.ч и все формы мн.ч <b>(They are sleeping) </b>\n\nЛичные местоимения и вспомогательный глагол часто сокращаются до <b>I’m, he’s, she’s, it’s, we’re, you’re, they’re</b>.
    Причастие настоящего времени (Participle I) можно получить, прибавив к начальной форме значимого глагола окончание <b>-ing:</b>
    </string>
    <string name="present_continiuous_five">В <b>вопросительном предложении</b> вспомогательный глагол выносится на место перед подлежащим, а значимый глагол остается после него:</string>
    <string name="present_continiuous_six">В <b>отрицательных предложениях</b> за вспомогательным глаголом следует отрицательная частица <b>not</b>. Формы <b>is</b> и are при этом могут быть сокращены до <b>isn’t</b> и <b>aren’t</b> соответственно.</string>
    <string name="past_continuous_zero">Время <b>Past Continuous</b> указывает на процесс, длившийся в определенный момент или период в прошлом. В отличие от времени <b>Past Simple</b>,
        этот момент в прошлом должен быть назван прямо <b>(например, yesterday at 5 o’clock, when you called, when rain started)</b> или быть очевидным из контекста</string>
    <string name="past_continuous_four">Для того, чтобы поставить глагол в форму <b>Past Continuous</b>, нужен вспомогательный глагол <b>to be</b> в
        прошедшем времени и причастие настоящего времени (Participle I) смыслового глагола.\n\n<b>To be</b> в прошедшем времени имеет две формы:\n
was – 1 и 3 лицо ед. ч. (I was smoking. He was eating.)\n
were – 2 лицо ед. ч. и все формы мн. ч. (They were laughing.)</string>
    <string name="past_continuous_five">В <b>отрицательных предложениях</b> за вспомогательным глаголом следует отрицательная частица <b>not</b>. Формы <b>was и were</b> при этом могут быть сокращены до <b>wasn’t и weren’t</b> соответственно.</string>
    <string name="future_continuous_zero">Время  <b>Future Continuous </b> указывает на процесс, который будет длиться в определенный момент в будущем. В отличие от времени  <b>Future Simple </b>, этот момент в будущем должен быть назван прямо  <b>(tomorrow at 4 o’clock, when we meet) </b> или быть очевидным из контекста.</string>
    <string name="future_continuous_four">Для того, чтобы поставить глагол в форму <b>Future Continuous</b>, нужен вспомогательный глагол <b>to be</b> в будущем времени и причастие настоящего времени (Participle I) смыслового глагола.
    \n\nTo be в будущем времени имеет две формы:\n\n

 <b>shall be – 1 лицо. (I shall be studying. We shall be running.) </b>\n
 <b>will be – 2  и 3 лицо. (They will be packing presents.) </b>\n\n
Примечание:\n\n
Личные местоимения и вспомогательный глагол часто сокращаются до  <b>I’ll, he’ll, they’ll </b> и т. д.
В вопросительном предложении  <b>shall / will </b> выносится на место перед подлежащим, а  <b>to be </b> и смысловой глагол остаются после него:
    </string>
    <string name="future_continiuous_five">В <b>отрицательных предложениях</b> после <b>shall / will</b> ставится отрицательная частица <b>not</b>.
        Вместе они могут быть сокращены до формы <b>shan’t (чаще в брит. английском) или won’t:</b></string>
    <string name="future_perfect_zero">Время <b>Present Perfect</b> обозначает действие, которое завершилось к настоящему моменту или
        завершено в период настоящего времени. Хотя английские глаголы в <b>Present Perfect</b> обычно переводятся на русский язык в
        прошедшем времени, следует помнить, что в английском языке эти действия воспринимаются в настоящем времени, так как привязаны к
        настоящему результатом этого действия.</string>
</resources>