<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE9EBE9">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titlePresentSimple"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/presentsimple_title_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/zero"
            style="@style/BodyText"
            android:text="@string/presentSimple_zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePresentSimple" />

        <TextView
            android:id="@+id/soundOne"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="to sing, to draw, to exist,to stand "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zero" />

        <TextView
            android:id="@+id/oneText"
            style="@style/SoundText"
            android:text="петь, рисовать, существовать, стоять"
            app:layout_constraintEnd_toEndOf="@id/soundOne"
            app:layout_constraintStart_toStartOf="@id/soundOne"
            app:layout_constraintTop_toBottomOf="@id/soundOne" />

        <TextView
            android:id="@+id/two"
            style="@style/BodyText"
            android:text="@string/presentsimple_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oneText" />

        <TextView
            android:id="@+id/three"
            style="@style/TitleText"
            android:text="@string/english_verb_title_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/two" />

        <TextView
            android:id="@+id/four"
            style="@style/BodyText"
            android:text="@string/english_verb_four"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/three" />

        <TextView
            android:id="@+id/soundTwo"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="walk, play , eat "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <TextView
            android:id="@+id/five"
            style="@style/SoundText"
            android:text="идти, играть, есть"
            app:layout_constraintEnd_toEndOf="@id/soundTwo"
            app:layout_constraintStart_toStartOf="@id/soundTwo"
            app:layout_constraintTop_toBottomOf="@id/soundTwo" />

        <TextView
            android:id="@+id/six"
            style="@style/BodyText"
            android:text="@string/presentsimple_six"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/five" />

        <TextView
            android:id="@+id/soundThree"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="unleash, reread, replay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <TextView
            android:id="@+id/soundThreeTextTranslate"
            style="@style/SoundText"
            android:text="развязать, перечитать, переиграть"
            app:layout_constraintEnd_toEndOf="@id/soundThree"
            app:layout_constraintStart_toStartOf="@id/soundThree"
            app:layout_constraintTop_toBottomOf="@id/soundThree" />

        <TextView
            android:id="@+id/seven"
            style="@style/BodyText"
            android:text="@string/presentsimple_seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundThreeTextTranslate" />

        <TextView
            android:id="@+id/soundFour"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="underline, whitewash "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven" />

        <TextView
            android:id="@+id/soundFourTextTranslate"
            style="@style/SoundText"
            android:text="подчеркнуть, побелить"
            app:layout_constraintEnd_toEndOf="@id/soundFour"
            app:layout_constraintStart_toStartOf="@id/soundFour"
            app:layout_constraintTop_toBottomOf="@id/soundFour" />

        <TextView
            android:id="@+id/eight"
            style="@style/BodyText"
            android:text="@string/presentsimple_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundFourTextTranslate" />

        <TextView
            android:id="@+id/soundFive"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="look out, stand up "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <TextView
            android:id="@+id/soundFiveTextTranslate"
            style="@style/SoundText"
            android:text="высматривать, выдерживать"
            app:layout_constraintEnd_toEndOf="@id/soundFive"
            app:layout_constraintStart_toStartOf="@id/soundFive"
            app:layout_constraintTop_toBottomOf="@id/soundFive" />

        <TextView
            android:id="@+id/nine"
            style="@style/BodyText"
            android:text="@string/presentsimple_nine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundFiveTextTranslate" />

        <TextView
            android:id="@+id/soundSix"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="I work at the zoo."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <TextView
            android:id="@+id/soundSixTextTranslate"
            style="@style/SoundText"
            android:text="Я работаю в зоопарке"
            app:layout_constraintEnd_toEndOf="@id/soundSix"
            app:layout_constraintStart_toStartOf="@id/soundSix"
            app:layout_constraintTop_toBottomOf="@id/soundSix" />

        <TextView
            android:id="@+id/ten"
            style="@style/BodyText"
            android:text="@string/presentsimple_ten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundSixTextTranslate" />

        <TextView
            android:id="@+id/soundSeven"
            style="@style/TextSound"
            android:drawableEnd="@drawable/ic_play_arrow_black_24dp"
            android:text="I am going, Jim is going, people were going"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ten" />

        <TextView
            android:id="@+id/soundSevenTextTranslate"
            style="@style/SoundText"
            android:text="Я иду, Джим идет, люди шли"
            app:layout_constraintEnd_toEndOf="@id/soundSeven"
            app:layout_constraintStart_toStartOf="@id/soundSeven"
            app:layout_constraintTop_toBottomOf="@id/soundSeven" />

        <TextView
            android:id="@+id/titlePresentSimpleTwo"
            style="@style/TitleText"
            android:text="@string/presentsimple_title_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundSevenTextTranslate" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>